updated service contract + enhanced exception handling from downstream